group buffer-switching settings together

--- a/init.org
+++ b/init.org
@@ -412,14 +412,6 @@ This config aims to maximize Clojure programmer productivity through:
 (custom-set-variables
  '(winner-mode t))
 
-(defun switch-buffer-in-current-window ()
-  "Switch buffer in the current window, ignoring `display-buffer-alist`."
-  (interactive)
-  (let ((display-buffer-alist nil)) ;; Temporarily disable display-buffer-alist
-    (call-interactively 'switch-to-buffer)))
-
-(global-set-key (kbd "C-x b") #'switch-buffer-in-current-window)
-
 (setq
  ;; Uniquify buffer names
  uniquify-buffer-name-style 'forward
@@ -488,7 +480,14 @@ This config aims to maximize Clojure programmer productivity through:
 (global-set-key (kbd "C-S-b") 'treemacs)
 (global-set-key (kbd "C-x w") 'bury-buffer)
 
-(bind-key* (kbd "s-b") 'my/switch-buffer-here)
+(defun switch-buffer-in-current-window ()
+  "Switch buffer in the current window, ignoring `display-buffer-alist`."
+  (interactive)
+  (let ((display-buffer-alist nil)) ;; Temporarily disable display-buffer-alist
+    (call-interactively 'switch-to-buffer)))
+
+(global-set-key (kbd "C-x b") #'switch-buffer-in-current-window)
+(bind-key* (kbd "s-b") 'switch-buffer-in-current-window)
 (bind-key* (kbd "s-k") 'kill-buffer)
 #+end_src
 
