--- a/init.org
+++ b/init.org
@@ -333,6 +333,11 @@ This config aims to maximize Clojure programmer productivity through:
   :config
   (unless (member "all-the-icons" (font-family-list))
     (all-the-icons-install-fonts t)))
+
+(use-package all-the-icons-dired
+  :ensure t
+  :hook (dired-mode . all-the-icons-dired-mode))
+
 #+end_src
 
 ** Editing
