--- a/init.org
+++ b/init.org
@@ -694,7 +694,7 @@ Shamelessly copied from [[https://github.com/jamescherti/minimal-emacs.d][minima
              embark-prefix-help-command)
   :bind
   (("C-." . embark-act)         ;; pick some comfortable binding
-   ("C-;" . embark-dwim)        ;; good alternative: M-.
+   ;; ("C-;" . embark-dwim)        ;; in conflict with iedit-mode hotkey
    ("C-c C-o" . embark-export)  ;; like ivy-occur
    ("C-h B" . embark-bindings)) ;; alternative for `describe-bindings'
 
