--- a/init.org
+++ b/init.org
@@ -2,7 +2,8 @@
 :header-args: :comments no :noweb yes :mkdirp yes
 :END:
 
-* Purpose of this Emacs config
+* Emacs config for Literate Programming in Clojure
+** Purpose of the config
 This config aims to maximize Clojure programmer productivity through:
 
 1. /Making Emacs easy to learn on the go/
@@ -25,8 +26,8 @@ This config aims to maximize Clojure programmer productivity through:
    In other words, the config itself is a Literate Program
 
 
-* Emacs initialization
-** Safe load: prevent errors from killing following initialization
+** Emacs initialization
+*** Safe load: prevent errors from killing following initialization
 #+begin_src elisp :tangle ./init.el
 (defun safe-load (file)
   (condition-case load-err
@@ -38,7 +39,7 @@ This config aims to maximize Clojure programmer productivity through:
 (safe-load "~/.emacs.d/elisp/customization-api-tweaks.tngl.el")
 #+end_src
 
-** Separate custom.el from init.el
+*** Separate custom.el from init.el
 #+begin_src elisp :tangle ~/.emacs.d/elisp/customization-api-tweaks.tngl.el
 ;; separate custom-file because it's a mess, with everything in one place
 (setq custom-file "~/.emacs.d/elisp/custom-set-variables.el")
@@ -49,12 +50,12 @@ This config aims to maximize Clojure programmer productivity through:
 #+end_src
 
 
-* Package management
+** Package management
 #+begin_src elisp :tangle ./init.el
 (safe-load "~/.emacs.d/elisp/package-management.tngl.el")
 #+end_src
 
-** Set URLs from which we search and download packages
+*** Set URLs from which we search and download packages
 #+begin_src elisp :tangle ~/.emacs.d/elisp/package-management.tngl.el
 (setq package-archives
       '(("gnu" . "http://elpa.gnu.org/packages/")
@@ -62,7 +63,7 @@ This config aims to maximize Clojure programmer productivity through:
 	("melpa" . "http://melpa.org/packages/")))
 #+end_src
 
-** Init package.el, fetch available packages from URLs
+*** Init package.el, fetch available packages from URLs
 #+begin_src elisp :tangle ~/.emacs.d/elisp/package-management.tngl.el
 ;; start package system (package.el, package dirs, available packages cache)
 (package-initialize)
@@ -72,7 +73,7 @@ This config aims to maximize Clojure programmer productivity through:
   (package-refresh-contents))
 #+end_src
 
-** Install and load all non-default packages
+*** Install and load all non-default packages
 #+begin_src elisp :tangle ~/.emacs.d/elisp/package-management.tngl.el
 ;; install all non-default packages
 (dolist (pkg package-selected-packages)
@@ -85,12 +86,12 @@ This config aims to maximize Clojure programmer productivity through:
 #+end_src
 
 
-* General global settings
+** General global settings
 #+begin_src elisp :tangle ./init.el
 (safe-load "~/.emacs.d/elisp/global-settings.tngl.el")
 #+end_src
 
-** Emacs startup/exit
+*** Emacs startup/exit
 #+begin_src elisp :tangle ~/.emacs.d/elisp/global-settings.tngl.el
 (setq
  ;; Don't display load average
@@ -107,7 +108,7 @@ This config aims to maximize Clojure programmer productivity through:
  )
 #+end_src
 
-** Elisp
+*** Elisp
 #+begin_src elisp :tangle ~/.emacs.d/elisp/global-settings.tngl.el
 ;; the dir with elisp files to be loaded
 (add-to-list 'load-path "~/.emacs.d/elisp/")
@@ -122,12 +123,12 @@ This config aims to maximize Clojure programmer productivity through:
   nil)
 #+end_src
 
-** Use SSH through daemon launched on startup
+*** Use SSH through daemon launched on startup
 #+begin_src elisp :tangle ~/.emacs.d/elisp/global-settings.tngl.el
 (setenv "SSH_AUTH_SOCK" (concat (getenv "XDG_RUNTIME_DIR") "/ssh-agent.socket"))
 #+end_src
 
-** Sound
+*** Sound
 #+begin_src elisp :tangle ~/.emacs.d/elisp/global-settings.tngl.el
 ;; use screen flash instead of annoying error sound
 (setq
@@ -135,8 +136,8 @@ This config aims to maximize Clojure programmer productivity through:
  )
 #+end_src
 
-** Commands
-*** History
+*** Commands
+**** History
 #+begin_src elisp :tangle ~/.emacs.d/elisp/global-settings.tngl.el
 ;; save command history, e. g. for execute-extended-command
 (savehist-mode 1)
@@ -145,21 +146,21 @@ This config aims to maximize Clojure programmer productivity through:
 (recentf-mode 1)
 #+end_src
 
-*** Easier yes/no
+**** Easier yes/no
 #+begin_src elisp :tangle ~/.emacs.d/elisp/global-settings.tngl.el
 ;; Replace yes/no prompts with y/n
 (fset 'yes-or-no-p 'y-or-n-p)
 (setq use-short-answers t)
 #+end_src
 
-*** Easy (1 button) command repeat
+**** Easy (1 button) command repeat
 #+begin_src elisp :tangle ~/.emacs.d/elisp/global-settings.tngl.el
 ;; make some multi-chord commands repeatable with 1 key press
 ;; for example - repeat C-x <LEFT> (previous-buffer) with just <LEFT>
 (repeat-mode 1)
 #+end_src
 
-** Emacs temporary files
+*** Emacs temporary files
 #+begin_src elisp :tangle ~/.emacs.d/elisp/global-settings.tngl.el
 ;; stop creating backup~ files
 (setq make-backup-files nil)
@@ -178,18 +179,18 @@ This config aims to maximize Clojure programmer productivity through:
 #+end_src
 
 
-* Text
+** Text
 #+begin_src elisp :tangle ./init.el
 (safe-load "~/.emacs.d/elisp/text-settings.tngl.el")
 #+end_src
 
-** Navigation
-*** Avy
+*** Navigation
+**** Avy
 #+begin_src elisp :tangle ~/.emacs.d/elisp/text-settings.tngl.el
 (keymap-global-set "M-SPC" #'avy-goto-word-0)
 #+end_src
 
-*** Bookmarks (bm package)
+**** Bookmarks (bm package)
 #+begin_src elisp :tangle ~/.emacs.d/elisp/text-settings.tngl.el
 (declare-function poly-org-mode? "org-mode.tangled")
 
@@ -280,18 +281,18 @@ This config aims to maximize Clojure programmer productivity through:
   (bind-key* (kbd "C-<f2>") 'bm-toggle))
 #+end_src
 
-*** Beacon mode - highlight cursor after jump
+**** Beacon mode - highlight cursor after jump
 #+begin_src elisp :tangle ~/.emacs.d/elisp/text-settings.tngl.el
 (beacon-mode 1)
 #+end_src
 
-*** Narrowing
+**** Narrowing
 #+begin_src elisp :tangle ~/.emacs.d/elisp/text-settings.tngl.el
 ;; enable narrowing command, I use it with iedit often
 (put 'narrow-to-region 'disabled nil)
 #+end_src
 
-** Display
+*** Display
 #+begin_src elisp :tangle ~/.emacs.d/elisp/text-settings.tngl.el
 ;; blinking cursor is annoying
 (blink-cursor-mode -1)
@@ -334,7 +335,7 @@ This config aims to maximize Clojure programmer productivity through:
 (global-display-fill-column-indicator-mode t)
 #+end_src
 
-*** all-the-icons
+**** all-the-icons
 #+begin_src elisp :tangle ~/.emacs.d/elisp/text-settings.tngl.el
 (use-package all-the-icons
   :ensure t
@@ -352,13 +353,13 @@ This config aims to maximize Clojure programmer productivity through:
   :hook (marginalia-mode . all-the-icons-completion-mode))
 #+end_src
 
-** Editing
-*** Highlight symbol occurrences / multiple edits
+*** Editing
+**** Highlight symbol occurrences / multiple edits
 #+begin_src elisp :tangle ~/.emacs.d/elisp/text-settings.tngl.el
 (global-set-key (kbd "C-;") 'iedit-mode)
 #+end_src
 
-*** Whitespace
+**** Whitespace
 #+begin_src elisp :tangle ~/.emacs.d/elisp/text-settings.tngl.el
 (setq
 
@@ -373,7 +374,7 @@ This config aims to maximize Clojure programmer productivity through:
 (add-hook 'before-save-hook 'delete-trailing-whitespace)
 #+end_src
 
-*** Undo
+**** Undo
 #+begin_src elisp :tangle ~/.emacs.d/elisp/text-settings.tngl.el
 ;; make undo hotkey familiar
 (global-set-key (kbd "C-z") 'undo)
@@ -382,7 +383,7 @@ This config aims to maximize Clojure programmer productivity through:
 (global-undo-fu-session-mode 1)
 #+end_src
 
-*** Copy/paste
+**** Copy/paste
 #+begin_src elisp :tangle ~/.emacs.d/elisp/text-settings.tngl.el
 ;; delete active region on yanking (paste)
 (cua-mode 1)
@@ -403,7 +404,7 @@ This config aims to maximize Clojure programmer productivity through:
  )
 #+end_src
 
-** Syncing with filesystem (reverting)
+*** Syncing with filesystem (reverting)
 #+begin_src elisp :tangle ~/.emacs.d/elisp/text-settings.tngl.el
 ;; The auto-revert setting is enabled because tangle / detangle for literate
 ;; programming will change contents of files. If the file is open in a buffer,
@@ -412,13 +413,13 @@ This config aims to maximize Clojure programmer productivity through:
 #+end_src
 
 
-* Frame/window/buffer configuration
+** Frame/window/buffer configuration
 #+begin_src elisp :tangle ./init.el
 (safe-load "~/.emacs.d/elisp/frame-window-buffer-settings.tngl.el")
 #+end_src
 
-** Display
-*** Hide
+*** Display
+**** Hide
 #+begin_src elisp :tangle ~/.emacs.d/elisp/frame-window-buffer-settings.tngl.el
 ;; hide useless title bar, but allow resizing
 (add-to-list 'default-frame-alist '(undecorated . t))
@@ -438,7 +439,7 @@ This config aims to maximize Clojure programmer productivity through:
  )
 #+end_src
 
-*** Splitting/resizing
+**** Splitting/resizing
 #+begin_src elisp :tangle ~/.emacs.d/elisp/frame-window-buffer-settings.tngl.el
 (setq
  ;; Disable vertical window splitting
@@ -452,7 +453,7 @@ This config aims to maximize Clojure programmer productivity through:
  )
 #+end_src
 
-*** Creating buffers and choosing how to display them
+**** Creating buffers and choosing how to display them
 #+begin_src elisp :tangle ~/.emacs.d/elisp/frame-window-buffer-settings.tngl.el
 ;; record changes in window configuration, to enable reverting them
 (custom-set-variables
@@ -502,7 +503,7 @@ This config aims to maximize Clojure programmer productivity through:
  )
 #+end_src
 
-** Scrolling
+*** Scrolling
 #+begin_src elisp :tangle ~/.emacs.d/elisp/frame-window-buffer-settings.tngl.el
 (setq
  ;; Lighten vertical scroll
@@ -513,7 +514,7 @@ This config aims to maximize Clojure programmer productivity through:
  )
 #+end_src
 
-** Save/load frame configuration on exit/start
+*** Save/load frame configuration on exit/start
 #+begin_src elisp :tangle ~/.emacs.d/elisp/frame-window-buffer-settings.tngl.el
 (setq
  ;; always save window/frame/buffer config
@@ -522,8 +523,8 @@ This config aims to maximize Clojure programmer productivity through:
 (desktop-save-mode t)
 #+end_src
 
-** Navigation
-*** Buffer/window/frame switching, burying, treemacs
+*** Navigation
+**** Buffer/window/frame switching, burying, treemacs
 #+begin_src elisp :tangle ~/.emacs.d/elisp/frame-window-buffer-settings.tngl.el
 (bind-key* (kbd "C-o") 'other-window)
 (bind-key* (kbd "M-o") 'other-frame)
@@ -541,7 +542,7 @@ This config aims to maximize Clojure programmer productivity through:
 (bind-key* (kbd "s-k") 'kill-buffer)
 #+end_src
 
-*** Tabs
+**** Tabs
 Couldn't find desirable tab functionality which would allow me to tab through
 different parts on 1 file, having a set of tabs for each window.
 
@@ -557,25 +558,25 @@ different parts on 1 file, having a set of tabs for each window.
 (global-set-key (kbd "C-x C-<right>") 'tab-bar-switch-to-next-tab)
 #+end_src
 
-** Minibuffer
+*** Minibuffer
 #+begin_src elisp :tangle ~/.emacs.d/elisp/frame-window-buffer-settings.tngl.el
 (setq enable-recursive-minibuffers t)
 #+end_src
 
 
-* Command/code completion
+** Command/code completion
 #+begin_src elisp :tangle ./init.el
 (safe-load "~/.emacs.d/elisp/completions.tngl.el")
 #+end_src
 
-** which-key mode
+*** which-key mode
 Shows completion options, after you start pressing hotkeys
 
 #+begin_src elisp :tangle ~/.emacs.d/elisp/completions.tngl.el
 (which-key-mode 1)
 #+end_src
 
-** keyfreq mode
+*** keyfreq mode
 Records how much times a command was used. Useful for optimizing hotkeys
 
 #+begin_src elisp :tangle ~/.emacs.d/elisp/completions.tngl.el
@@ -591,7 +592,7 @@ Records how much times a command was used. Useful for optimizing hotkeys
    next-line))
 #+end_src
 
-** Code completion
+*** Code completion
 #+begin_src elisp :tangle ~/.emacs.d/elisp/completions.tngl.el
 ;; Always show completions
 (setq completion-auto-help 'always)
@@ -603,13 +604,13 @@ Records how much times a command was used. Useful for optimizing hotkeys
 (setq tab-always-indent 'complete)
 #+end_src
 
-** Snippets (yasnippet)
+*** Snippets (yasnippet)
 #+begin_src elisp :tangle ~/.emacs.d/elisp/completions.tngl.el
 (setq yas-snippet-dirs '("~/.emacs.d/snippets/"))
 (yas-global-mode 1)
 #+end_src
 
-** Vertico + Consult + Ordqerless + Embark + Marginalia + Corfu + Cape
+*** Vertico + Consult + Ordqerless + Embark + Marginalia + Corfu + Cape
 Shamelessly copied from [[https://github.com/jamescherti/minimal-emacs.d][minimal-emacs setup]].
 
 #+begin_src elisp :tangle ~/.emacs.d/elisp/completions.tngl.el
@@ -818,14 +819,14 @@ Shamelessly copied from [[https://github.com/jamescherti/minimal-emacs.d][minima
 #+end_src
 
 
-* Improved text replace
+** Improved text replace
 Make search-and-replace across project work as convenient as in VS Code.
 
 #+begin_src elisp :tangle ./init.el
 (safe-load "~/.emacs.d/elisp/improved-text-replace.tngl.el")
 #+end_src
 
-** Wgrep
+*** Wgrep
 #+begin_src elisp :tangle ~/.emacs.d/elisp/improved-text-replace.tngl.el
 ;; wgrep allows to convert grep buffers to editable, to get VS Code-like
 ;; search and replace experience
@@ -836,7 +837,7 @@ Make search-and-replace across project work as convenient as in VS Code.
   (wgrep-change-readonly-file t))
 #+end_src
 
-** Replace+.el
+*** Replace+.el
 Allows to invoke replace fn with a search regex in the list of defaults.
 The defaults are cycled in minibuffer with up/down arrows.
 
@@ -861,19 +862,19 @@ The defaults are cycled in minibuffer with up/down arrows.
 #+end_src
 
 
-* Programming
+** Programming
 #+begin_src elisp :tangle ./init.el
 (safe-load "~/.emacs.d/elisp/programming-settings.tngl.el")
 #+end_src
 
-** Syntax checking
+*** Syntax checking
 #+begin_src elisp :tangle ~/.emacs.d/elisp/programming-settings.tngl.el
 ;; check syntax globally
 (global-flycheck-mode)
 #+end_src
 
-** Parenthesis config
-*** Puni-mode
+*** Parenthesis config
+**** Puni-mode
 #+begin_src elisp :tangle ~/.emacs.d/elisp/programming-settings.tngl.el
 ;; toggle puni-mode manually
 (global-set-key (kbd "M-P") 'puni-mode)
@@ -896,7 +897,7 @@ The defaults are cycled in minibuffer with up/down arrows.
 (add-hook 'minibuffer-setup-hook (lambda () (puni-mode -1)))
 #+end_src
 
-*** Display
+**** Display
 #+begin_src elisp :tangle ~/.emacs.d/elisp/programming-settings.tngl.el
 (add-hook 'prog-mode-hook #'rainbow-delimiters-mode)
 
@@ -904,8 +905,8 @@ The defaults are cycled in minibuffer with up/down arrows.
 (show-paren-mode 1)
 #+end_src
 
-** Clojure
-*** CIDER
+*** Clojure
+**** CIDER
 #+begin_src elisp :tangle ~/.emacs.d/elisp/programming-settings.tngl.el
 (setq
  nrepl-hide-special-buffers t
@@ -953,7 +954,7 @@ The defaults are cycled in minibuffer with up/down arrows.
 (define-key cua-global-keymap [C-return] nil)
 #+end_src
 
-**** Routing expressions to CLJ/CLJS REPL for evaluation
+***** Routing expressions to CLJ/CLJS REPL for evaluation
 #+begin_src elisp :tangle ~/.emacs.d/elisp/programming-settings.tngl.el
 (defun eval-last-sexp-in-specific-repl (repl-type)
   "Evaluate the last expression only in the 'clj or 'cljs REPL."
@@ -979,13 +980,13 @@ The defaults are cycled in minibuffer with up/down arrows.
 (define-key cider-mode-map (kbd "C-S-<return>") 'eval-last-sexp-in-cljs)
 #+end_src
 
-** CSS
+*** CSS
 #+begin_src elisp :tangle ~/.emacs.d/elisp/programming-settings.tngl.el
 (setq css-indent-offset 2)
 #+end_src
 
 
-* Org-mode (literate programming)
+** Org-mode (literate programming)
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tngl.el
 (require 'org)
 #+end_src
@@ -994,20 +995,20 @@ The defaults are cycled in minibuffer with up/down arrows.
 (safe-load "~/.emacs.d/elisp/org-mode.tngl.el")
 #+end_src
 
-** Time-tracking
+*** Time-tracking
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tngl.el
 ;; closing Emacs/buffers must not stop work clock
 (setq org-clock-persist 'history)
 (org-clock-persistence-insinuate)
 #+end_src
 
-** Navigation
-*** Single-letter hotkeys
+*** Navigation
+**** Single-letter hotkeys
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tngl.el
 (setq org-use-speed-commands t)
 #+end_src
 
-*** Heading subtree fold state cycling
+**** Heading subtree fold state cycling
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tngl.el
 (defun org-cycle-current-subtree (orig-fun &rest args)
   "Cycle fold state of current heading similar to org-shifttab, if org-cycle
@@ -1042,8 +1043,7 @@ Cycles through three states:
              'org-optimize-window-after-visibility-change)
 #+end_src
 
-
-** Initialization
+*** Initialization
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tngl.el
 (eval-after-load 'org
   (org-babel-do-load-languages
@@ -1060,8 +1060,8 @@ Cycles through three states:
  org-modules '(ol-docview ol-doi ol-info org-tempo))
 #+end_src
 
-** Display
-*** General
+*** Display
+**** General
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tngl.el
 ;; background colors are changed to be consistent with src-blocks in org-mode
 (setq
@@ -1085,8 +1085,8 @@ Cycles through three states:
 			(file . find-file-other-frame)))
 #+end_src
 
-** Linking
-*** General
+*** Linking
+**** General
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tngl.el
 ;; links that use header text:
 ;; 1. break easily
@@ -1098,7 +1098,7 @@ Cycles through three states:
 (define-key org-mode-map (kbd "<f9>") 'org-id-copy)
 #+end_src
 
-*** Custom :src source block header
+**** Custom :src source block header
 <<<:src>>> is a custom header that I add manually to noref code blocks
 
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tngl.el
@@ -1114,7 +1114,7 @@ Cycles through three states:
 (define-key org-mode-map (kbd "C-c o") 'org-babel-open-tangle-file)
 #+end_src
 
-** Editing
+*** Editing
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tngl.el
 (setq
  org-support-shift-select 'always
@@ -1138,8 +1138,8 @@ Cycles through three states:
 (remove-hook 'org-mode-hook 'my-angle-bracket-fix)
 #+end_src
 
-** Code execution
-*** Clojure namespace determination
+*** Code execution
+**** Clojure namespace determination
 I use file from custom :src or :tangle header to determine proper ns for eval
 
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tngl.el
@@ -1179,7 +1179,7 @@ Searches for ns in :tangle or :src file, otherwise calls clojure-find-ns."
 ;; (advice-remove 'cider-current-ns 'org-clojure-block-get-ns)
 #+end_src
 
-** Tangling
+*** Tangling
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tngl.el
 ;; override broken fn, which deletes comments from clojure code
 (safe-load "~/.emacs.d/elisp/ob-clojure-fix.el")
@@ -1188,12 +1188,12 @@ Searches for ns in :tangle or :src file, otherwise calls clojure-find-ns."
 #+end_src
 
 
-* Many major mods in one buffer - polymode (poly-org)
+** Many major mods in one buffer - polymode (poly-org)
 #+begin_src elisp :tangle ./init.el
 (safe-load "~/.emacs.d/elisp/polymode.tngl.el")
 #+end_src
 
-** Flycheck fix
+*** Flycheck fix
 Prevents flycheck from confusing buffers and breaking down. See this [[https://github.com/polymode/poly-org/issues3/][issue]]
 
 #+begin_src elisp :tangle ~/.emacs.d/elisp/polymode.tngl.el
@@ -1205,7 +1205,7 @@ Prevents flycheck from confusing buffers and breaking down. See this [[https://g
             :before-while #'flycheck-buffer-not-indirect-p)
 #+end_src
 
-** Background color fix
+*** Background color fix
 #+begin_src elisp :tangle ~/.emacs.d/elisp/polymode.tngl.el
 ;; polymode ignores background face config for both inner modes and org mode
 (add-hook
@@ -1216,7 +1216,7 @@ Prevents flycheck from confusing buffers and breaking down. See this [[https://g
            :extend t))))
 #+end_src
 
-** Source blocks display fix
+*** Source blocks display fix
 #+begin_src elisp :tangle ~/.emacs.d/elisp/polymode.tngl.el
 ;; these supposed to prevent breaking display of source blocks
 (setq
@@ -1224,7 +1224,7 @@ Prevents flycheck from confusing buffers and breaking down. See this [[https://g
  org-startup-indented nil)
 #+end_src
 
-** Fix for tangling inside source blocks, when noweb-refs are present
+*** Fix for tangling inside source blocks, when noweb-refs are present
 I spent 3 days trying to fix this [[https://github.com/polymode/poly-org/issues/53][issue]]. This hack avoids dealing with all the
 difficult noweb expansion and its conflict with polymode.
 
@@ -1260,7 +1260,7 @@ org-babel-expand-noweb-references explodes polymode. Don't save anything."
 	    'pm--tangle-inside-source-block)
 #+end_src
 
-** Region random resize fix
+*** Region random resize fix
 #+begin_src elisp :tangle ~/.emacs.d/elisp/polymode.tngl.el
 ;; eldoc causes issues in my setup, sometimes marked region resizes randomly
 ;; tried eldoc-box to replace it, but it didn't work most of the time
@@ -1272,12 +1272,12 @@ org-babel-expand-noweb-references explodes polymode. Don't save anything."
 #+end_src
 
 
-* File management
+** File management
 #+begin_src elisp :tangle ./init.el
 (safe-load "~/.emacs.d/elisp/file-management.tngl.el")
 #+end_src
 
-** Permissions
+*** Permissions
 #+begin_src elisp :tangle ~/.emacs.d/elisp/file-management.tngl.el
 ;; trying these setting to be able to edit files as root
 (require 'tramp)
@@ -1285,7 +1285,7 @@ org-babel-expand-noweb-references explodes polymode. Don't save anything."
 
 #+end_src
 
-** Extensions
+*** Extensions
 #+begin_src elisp :tangle ~/.emacs.d/elisp/file-management.tngl.el
 ;; mode that enables choosing program-to-open-with based on file extensions
 (openwith-mode t)
